fixed vertical fit layout on small screens with settings opened

--- a/motioneye/static/css/main.css
+++ b/motioneye/static/css/main.css
@@ -1192,6 +1192,7 @@ img.camera-progress {
 @media all and (max-width: 1200px) {
     div.page-container {
         font-size: 16px !important;
+        margin-left: auto !important;
     }
 
     div.camera-frame {
